Show digital js button only when the main view isn't focused

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
             "editor/title": [
                 {
                     "command": "digitaljs.openView",
+                    "when": "!digitaljs.view_isfocus",
                     "group": "navigation"
                 }
             ],
