New circuit command
Also rename JSON to circuit on the UI

--- a/package.json
+++ b/package.json
@@ -52,20 +52,32 @@
                 "category": "DigitalJS"
             },
             {
+                "command": "digitaljs.newJSON",
+                "title": "New Circuit",
+                "icon": "$(new-file)",
+                "category": "DigitalJS"
+            },
+            {
                 "command": "digitaljs.openJSON",
-                "title": "Open JSON",
+                "title": "Open Circuit",
                 "icon": "$(folder-opened)",
                 "category": "DigitalJS"
             },
             {
+                "command": "digitaljs.addFiles",
+                "title": "Add Files",
+                "icon": "$(add)",
+                "category": "DigitalJS"
+            },
+            {
                 "command": "digitaljs.saveJSON",
-                "title": "Save JSON",
+                "title": "Save Circuit",
                 "icon": "$(save)",
                 "category": "DigitalJS"
             },
             {
                 "command": "digitaljs.saveAsJSON",
-                "title": "Save As JSON",
+                "title": "Save As Circuit",
                 "icon": "$(save-as)",
                 "category": "DigitalJS"
             }
@@ -73,19 +85,29 @@
         "menus": {
             "view/title": [
                 {
+                    "command": "digitaljs.newJSON",
+                    "when": "view == digitaljs-proj-files",
+                    "group": "navigation@0"
+                },
+                {
                     "command": "digitaljs.openJSON",
                     "when": "view == digitaljs-proj-files",
                     "group": "navigation@1"
                 },
                 {
-                    "command": "digitaljs.saveJSON",
+                    "command": "digitaljs.addFiles",
                     "when": "view == digitaljs-proj-files",
                     "group": "navigation@2"
                 },
                 {
-                    "command": "digitaljs.saveAsJSON",
+                    "command": "digitaljs.saveJSON",
                     "when": "view == digitaljs-proj-files",
                     "group": "navigation@3"
+                },
+                {
+                    "command": "digitaljs.saveAsJSON",
+                    "when": "view == digitaljs-proj-files",
+                    "group": "navigation@4"
                 }
             ],
             "editor/title": [
