--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "DigitalJS integration for VS Code",
     "version": "0.0.1",
     "publisher": "yuyichao",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/yuyichao/digitaljs_code.git"
+    },
     "engines": {
         "vscode": "^1.62.0"
     },
