--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "DigitalJS",
     "description": "DigitalJS integration for VS Code",
     "version": "0.0.1",
+    "license": "SEE LICENSE IN LICENSE",
     "publisher": "yuyichao",
     "repository": {
         "type": "git",
