--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "Visualization",
         "Other"
     ],
+    "keywords": [
+        "verilog", "simulation"
+    ],
     "activationEvents": [
         "onCommand:digitaljs.openView"
     ],
