--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "Other"
     ],
     "keywords": [
-        "verilog", "simulation"
+        "verilog",
+        "simulation"
     ],
     "activationEvents": [
         "onCommand:digitaljs.openView"
     ],
     "main": "./extension.js",
+    "browser": "./dist/web-extension.js",
     "contributes": {
         "commands": [
             {
@@ -234,6 +236,7 @@
         "mocha": "^9.1.3",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
+        "process": "^0.11.10",
         "sass-loader": "^12.4.0",
         "style-loader": "^3.3.1",
         "typescript": "^4.4.4",
@@ -247,6 +250,7 @@
         "backbone": "^1.4.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
         "digitaljs_lua": "^0.0.5",
+        "path-browserify": "^1.0.1",
         "resize-observer-polyfill": "^1.5.1",
         "split-grid": "^1.0.11",
         "wavecanvas": "^1.0.0"
