--- a/package.json
+++ b/package.json
@@ -273,6 +273,7 @@
         "mocha": "^9.1.3",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
+        "ovsx": "^0.2.1",
         "process": "^0.11.10",
         "sass-loader": "^12.4.0",
         "style-loader": "^3.3.1",
