--- a/package.json
+++ b/package.json
@@ -305,11 +305,13 @@
         "@vscode/webview-ui-toolkit": "^0.8.4",
         "3vl": "^1.0.0",
         "backbone": "^1.4.0",
+        "crypto-browserify": "^3.12.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
         "digitaljs_lua": "^0.0.5",
         "path-browserify": "^1.0.1",
         "resize-observer-polyfill": "^1.5.1",
         "split-grid": "^1.0.11",
+        "stream-browserify": "^3.0.0",
         "wavecanvas": "github:yuyichao/wavecanvas#text-color"
     }
 }
