--- a/package.json
+++ b/package.json
@@ -312,6 +312,6 @@
         "resize-observer-polyfill": "^1.5.1",
         "split-grid": "^1.0.11",
         "stream-browserify": "^3.0.0",
-        "wavecanvas": "github:yuyichao/wavecanvas#text-color"
+        "wavecanvas": "github:tilk/wavecanvas"
     }
 }
