Bundle extension for local execution and all views
Also exclude the worker from the main view since it doesn't work and we replace the URL ourselves anyway...

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "activationEvents": [
         "onStartupFinished"
     ],
-    "main": "./extension.js",
+    "main": "./dist/local-extension.js",
     "browser": "./dist/web-extension.js",
     "contributes": {
         "commands": [
