Do not use mini-css-extract-plugin
Requires us to add the right css file name

--- a/package.json
+++ b/package.json
@@ -268,9 +268,11 @@
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "npm-run-all compile:*",
-        "compile:views": "webpack --mode development",
+        "compile:views": "webpack --mode production",
         "watch": "npm-run-all watch:*",
-        "watch:views": "webpack --watch --mode development",
+        "watch:webpack": "webpack --watch --mode development",
+        "watch-prod": "npm-run-all watch-prod:*",
+        "watch-prod:webpack": "webpack --watch --mode production",
         "lint": "eslint .",
         "pretest": "npm run lint",
         "test": "node ./test/runTest.js",
@@ -288,7 +290,6 @@
         "expose-loader": "^3.1.0",
         "glob": "^7.1.7",
         "jquery": "^3.6.0",
-        "mini-css-extract-plugin": "^2.4.5",
         "mocha": "^9.1.3",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
