--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,3 +7,10 @@ vsc-extension-quickstart.md
 **/jsconfig.json
 **/*.map
 **/.eslintrc.json
+extensions.js
+webpack.config.js
+src/
+view/
+node_modules/
+!node_modules/@vscode/webview-ui-toolkit/dist/toolkit.min.js
+!node_modules/@vscode/codicons/dist/
