Use yosysjs for synthesis
This gets rid of the dependency on digitaljs_online servers.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -13,3 +13,4 @@ view/
 node_modules/
 !node_modules/@vscode/webview-ui-toolkit/dist/toolkit.min.js
 !node_modules/@vscode/codicons/dist/
+!node_modules/yosysjs/dist/yosys.wasm
