--- a/package.json
+++ b/package.json
@@ -253,16 +253,6 @@
                     "contextualTitle": "DigitalJS Status"
                 }
             ]
-        },
-        "configuration": {
-            "title": "DigitalJS",
-            "properties": {
-                "digitaljs.serverURL": {
-                    "type": "string",
-                    "default": "https://digitaljs.tilk.eu",
-                    "description": "DigitalJS server URL"
-                }
-            }
         }
     },
     "scripts": {
@@ -305,6 +295,7 @@
         "@vscode/codicons": "^0.0.27",
         "@vscode/webview-ui-toolkit": "^0.8.5",
         "3vl": "^1.0.0",
+        "assert": "^2.0.0",
         "backbone": "^1.4.0",
         "crypto-browserify": "^3.12.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
@@ -313,6 +304,9 @@
         "resize-observer-polyfill": "^1.5.1",
         "split-grid": "^1.0.11",
         "stream-browserify": "^3.0.0",
-        "wavecanvas": "github:tilk/wavecanvas"
+        "util": "^0.12.4",
+        "wavecanvas": "github:tilk/wavecanvas",
+        "yosys2digitaljs": "github:yuyichao/yosys2digitaljs",
+        "yosysjs": "github:yuyichao/yosysjs"
     }
 }
