Replace startup activation with command activation
The state restoration is now handled by vscode directly through custom editor.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     ],
     "activationEvents": [
         "onCustomEditor:digitaljs.circuitView",
-        "onStartupFinished"
+        "onCommand:digitaljs.openView",
+        "onCommand:digitaljs.openViewJSON",
+        "onCommand:digitaljs.openViewSource",
+        "onCommand:digitaljs.newJSON",
+        "onCommand:digitaljs.addFiles",
+        "onCommand:digitaljs.removeSource"
     ],
     "main": "./dist/local-extension.js",
     "browser": "./dist/web-extension.js",
