Apply fix for vscode button disabling issue on firefox
Ref microsoft/vscode-webview-ui-toolkit#323

--- a/package.json
+++ b/package.json
@@ -251,7 +251,7 @@
     },
     "dependencies": {
         "@vscode/codicons": "^0.0.27",
-        "@vscode/webview-ui-toolkit": "^0.9.0",
+        "@vscode/webview-ui-toolkit": "github:yuyichao/vscode-webview-ui-toolkit#dev",
         "3vl": "^1.0.0",
         "assert": "^2.0.0",
         "backbone": "^1.4.0",
