--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "onCommand:digitaljs.newViewSource",
         "onCommand:digitaljs.newJSON",
         "onCommand:digitaljs.addFiles",
+        "onCommand:digitaljs.exportImage",
         "onCommand:digitaljs.removeSource"
     ],
     "main": "./dist/local-extension.js",
@@ -93,6 +94,12 @@
                 "category": "DigitalJS"
             },
             {
+                "command": "digitaljs.exportImage",
+                "title": "Export Circuit As Image",
+                "icon": "$(file-media)",
+                "category": "DigitalJS"
+            },
+            {
                 "command": "digitaljs.removeSource",
                 "title": "Remove",
                 "icon": "$(dash)",
@@ -144,6 +151,11 @@
                     "command": "digitaljs.addFiles",
                     "when": "view == digitaljs-proj-files",
                     "group": "navigation@1"
+                },
+                {
+                    "command": "digitaljs.exportImage",
+                    "when": "view == digitaljs-proj-files",
+                    "group": "navigation@2"
                 }
             ],
             "editor/title": [
@@ -277,9 +289,11 @@
         "3vl": "^1.0.0",
         "assert": "^2.0.0",
         "backbone": "^1.4.0",
+        "base64-arraybuffer": "^1.0.2",
         "crypto-browserify": "^3.12.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
         "digitaljs_lua": "^0.0.5",
+        "html-to-image": "github:yuyichao/html-to-image#build",
         "lodash": "^4.17.21",
         "path-browserify": "^1.0.1",
         "resize-observer-polyfill": "^1.5.1",
