--- a/.vscodeignore
+++ b/.vscodeignore
@@ -10,6 +10,7 @@ extensions.js
 webpack.config.js
 src/
 view/
+imgs/screenshots/
 node_modules/
 !node_modules/@vscode/webview-ui-toolkit/dist/toolkit.min.js
 !node_modules/@vscode/codicons/dist/
