--- a/package.json
+++ b/package.json
@@ -299,8 +299,8 @@
         "split-grid": "^1.0.11",
         "stream-browserify": "^3.0.0",
         "util": "^0.12.4",
-        "wavecanvas": "github:tilk/wavecanvas",
-        "yosys2digitaljs": "github:tilk/yosys2digitaljs",
+        "wavecanvas": "^1.1.0",
+        "yosys2digitaljs": "^0.6.0",
         "yosysjs": "github:yuyichao/yosysjs"
     }
 }
