--- a/package.json
+++ b/package.json
@@ -304,6 +304,7 @@
         "crypto-browserify": "^3.12.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
         "digitaljs_lua": "^0.0.5",
+        "hammerjs": "^2.0.8",
         "lodash": "^4.17.21",
         "path-browserify": "^1.0.1",
         "resize-observer-polyfill": "^1.5.1",
